# go-work-play

./: README.md  go.work
cv1/: go.mod  hello.go
cv2/: BUILD.bazel  WORKSPACE  hello.go
shared/: go.mod
shared/foo/: foo.go
tools/: go.mod
tools/hello/: main.go
work/: WORKSPACE
work/a/: .bazelignore  BUILD.bazel  WORKSPACE  go.mod
work/b/: .bazelignore  BUILD.bazel  WORKSPACE  deps.bzl  go.mod  main.go
work/tools/: go.bzl  repository.bzl
