load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "b_lib",
    srcs = ["main.go"],
    importpath = "bozaro.ru/go-bazel/b",
    visibility = ["//visibility:private"],
    deps = [
        "@ru_bozaro_go_bazel_c//:c",
    ],
)

go_binary(
    name = "b",
    embed = [":b_lib"],
    visibility = ["//visibility:public"],
)
